tests/bad/res1.pas
program int;
var except: integer; // reserved word
begin

end.
